Kubernetes-manifests/ingress/ingress-for-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: http-01-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  rules:
    - host: andrzejkl.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
  tls:
    - hosts:
        - andrzejkl.site
      secretName: andrzejkl-site
